Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/NoFinal4.out
NoFinal4.java:11:18: compiler.err.enum.no.finalize
1 error
